data/derived/sp14/progs/unify/prog4353.ml.out
Characters 83-85:
  sin(pi *. e0)
            ^^
Error: This expression has type expr but an expression was expected of type
         float
